# knapsnack

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  SETUP.md  app.py  build.sh  calculator_functions.py  food_items.csv  helper_functions.py  main.ipynb  nutrients.csv  package.json  pyproject.toml  requirements.txt  run.sh  sample.csv  setup.cfg  sonar-project.properties  structure.md
.github/workflows/: ci.yml
client/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.js  vite.config.ts
client/public/: robots.txt  sample.csv  sitemap.xml
client/public/.well-known/: security.txt
client/src/: App.css  App.jsx  App.tsx  config.js  config.ts  index.css  main.jsx  main.tsx  react-katex.d.ts
client/src/components/: APIKeyInput.jsx  AboutPage.jsx  (+29 more)
nutrient-databases/: elements-RDAs.csv  elements-ULs.csv  vitamins-RDAs.csv  vitamins-ULs.csv
server/: .env  .gitignore  __init__.py  app.py  config.py  requirements.txt  utils.py
server/data/: __init__.py  nutrient_data.py
server/goalenv/: pyvenv.cfg
server/nutrient-databases/: AMDRs.csv  elements-ULs.csv  macros-RDAs.csv  vitamins-ULs.csv
server/services/: __init__.py  blog_service.py  calculation.py  food_service.py  optimisation.py  optimization.py
server/utils/: __init__.py  nutrient_utils.py  response_utils.py
static/: script.js
templates/: index.html
tests/: conftest.py  setup_tests.py  test_api.py  test_grid_search.py  test_integration.py  test_utils.py
(+110 files in other folders)
